--- a/ciência de dados/index.html
+++ b/ciência de dados/index.html
@@ -10,13 +10,9 @@
 
 <body>
     <header>
-
-        <h1>Relatório das redes sociais</h1>
         <nav>
-            <a href="index.html">Mundo</a>
             <a href="#">Minha escola</a>
         </nav>
-
     </header>
     <main class="graficos-section">
         <section id="graficos-container" class="graficos-container">
@@ -24,7 +20,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gabriel Soares</p>
+        <p>Desenvolvido por Matheus Fayad</p>
     </footer>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
